--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "^51.0.8",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "^0.74.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
